@@ -1,3 +1,7 @@
+[B]v1.2.2[/B]
+- Added support Playing video with subtitles from uptobox.
+- Cache pages.
+- Added "Clear Cache" option to addon-setting.
 [B]v1.2.1[/B]
 - Added support playing from uptobox.
 [B]v1.2.0[/B]
